OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Background_Job__c/Onboarding_Background_Job__c.object-meta.xml
<CustomObject>
    <description>Durable retry queue for onboarding background processing failures.</description>
    <label>Onboarding Background Job</label>
    <nameField>
        <displayFormat>OBJ-{00000000}</displayFormat>
        <label>Onboarding Background Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Background Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>