OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Background_Job__c/fields/Attempt_Count__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of attempts executed so far.</description>
    <label>Attempt Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>