OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Background_Job__c/fields/Context_Key__c.field-meta.xml
<CustomField>
    <fullName>Context_Key__c</fullName>
    <description>Flow-provided context key captured at fault time.</description>
    <label>Context Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>