OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Background_Job__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <description>Interview GUID / correlation identifier from the originating run.</description>
    <label>Correlation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>