OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Background_Job__c/fields/Idempotency_Key__c.field-meta.xml
<CustomField>
    <fullName>Idempotency_Key__c</fullName>
    <description>Deterministic key used to upsert and de-duplicate retry jobs.</description>
    <externalId>true</externalId>
    <label>Idempotency Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>