OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Background_Job__c/fields/Last_Error__c.field-meta.xml
<CustomField>
    <fullName>Last_Error__c</fullName>
    <description>Last error encountered while processing this background retry job.</description>
    <label>Last Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>