OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Background_Job__c/fields/Last_Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Last_Error_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Error Log</label>
    <referenceTo>Error_Log__c</referenceTo>
    <relationshipLabel>Background Retry Jobs</relationshipLabel>
    <relationshipName>Background_Retry_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>