OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Background_Job__c/fields/Last_Processed_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Processed_At__c</fullName>
    <description>Timestamp of the most recent processing attempt.</description>
    <label>Last Processed At</label>
    <type>DateTime</type>
</CustomField>