OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Background_Job__c/fields/Max_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Max_Attempts__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Maximum attempts before the job is dead-lettered.</description>
    <label>Max Attempts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>