OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Background_Job__c/fields/Next_Run_At__c.field-meta.xml
<CustomField>
    <fullName>Next_Run_At__c</fullName>
    <description>Timestamp when this job becomes eligible for retry execution.</description>
    <label>Next Run At</label>
    <type>DateTime</type>
</CustomField>