OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Background_Job__c/fields/Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Onboarding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding</label>
    <referenceTo>Onboarding__c</referenceTo>
    <relationshipLabel>Onboarding Background Jobs</relationshipLabel>
    <relationshipName>Onboarding_Background_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>