OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Background_Job__c/fields/Onboarding_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding Requirement</label>
    <referenceTo>Onboarding_Requirement__c</referenceTo>
    <relationshipLabel>Onboarding Requirement Background Jobs</relationshipLabel>
    <relationshipName>Onboarding_Requirement_Background_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>