OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Background_Job__c/fields/Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>Operation_Type__c</fullName>
    <description>Retry operation to execute for this job.</description>
    <label>Operation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Replay Onboarding Background Chain</fullName>
                <default>true</default>
                <label>Replay Onboarding Background Chain</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>