OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Background_Job__c/fields/Payload_JSON__c.field-meta.xml
<CustomField>
    <fullName>Payload_JSON__c</fullName>
    <description>Optional JSON payload snapshot used for replay diagnostics.</description>
    <label>Payload JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>