OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Background_Job__c/fields/Source_Flow_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Flow_Api_Name__c</fullName>
    <description>Flow API name that reported the failure.</description>
    <label>Source Flow API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>